Changed some grammar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="book">
       <div class="library">
         <div class="addBook">
-          <p>Add Book</p>
+          <p>Add a Book</p>
           <div class="add-form">
             <form action="" id="loginForm">
               <div class="name">
@@ -29,7 +29,7 @@
                 <label class="readLabel" for="read">Have read</label>
                 <input class="read" type="checkbox" id="read" checked>
               </div>
-              <button class="addBookButton" type="submit">ADD NEW BOOK</button> 
+              <button class="addBookButton" type="submit">Add a New Book</button> 
             </form>
           </div>
         </div>
